[tool.poetry]
name = "Djura-Tools"
version = "0.0.1"
description = "Djura Helper Functions and Tools"
authors = ["davitshahnazaryan3 <davit.shahnazaryan@iusspavia.it>", "volkanozsarac <volkan.ozsarac@iusspavia.it>"]
readme = "ReadMe.md"

[tool.poetry.dependencies]
python = "^3.12.0"
openquake-engine = "3.23.2"
fiona = "1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.3.5"
flake8 = "7.2.0"
pytest-cov = "6.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
omit = [

]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "@overload"]
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
